--- a/series.yml
+++ b/series.yml
@@ -17,9 +17,9 @@ series:
     - Trying
     
 # New Shows
-    - The Peripheral
     - Lucky Hank
     - Rabbit Hole
+    - Big Door Prize
 
   settings:
     shows:
