--- a/series.yml
+++ b/series.yml
@@ -19,8 +19,9 @@ series:
 # New Shows
     - Lucky Hank
     - Rabbit Hole
-    - Big Door Prize
+    - The Big Door Prize
     - Essex County
+    - Secret Invasion
 
   settings:
     shows:
