--- a/series.yml
+++ b/series.yml
@@ -22,6 +22,8 @@ series:
     - The Big Door Prize
     - Essex County
     - Secret Invasion
+    - Extrapolations
+    - Silo
 
   settings:
     shows:
