--- a/config.yml
+++ b/config.yml
@@ -19,7 +19,7 @@ tasks:
         for_accepted:
           - /home/pi/.local/bin/cleanvid -i "{{location}}" -o "{{location}}_clean.mkv" -w /home/pi/flexget/swears.txt -e -p 0
           - if [ -f "{{location}}_clean.mkv" ]; then rm "{{location}}"; else echo "nothing to clean"; fi
-          - find "{{location}}"*.srt -type f -delete
+          - find "{{location}}" -type f -iname \*.srt -delete
 
 # Showrss profile rss
   showrss:
