--- a/config.yml
+++ b/config.yml
@@ -19,7 +19,11 @@ tasks:
         for_accepted:
           - /home/pi/.local/bin/cleanvid -i "{{location}}" -o "{{location}}_clean.mkv" -w /home/pi/flexget/swears.txt -e -p 0
           - if [ -f "{{location}}_clean.mkv" ]; then rm "{{location}}"; else echo "nothing to clean"; fi
-          - find "{{location}}" -type f -iname \*.srt -delete
+      on_exit:
+        phase:
+          - find /home/pi/downloads/complete/ -type f -name "\*.srt" -delete
+          - find /home/pi/downloads/complete/ -type f -name "\*.exe" -delete
+          - find /home/pi/downloads/complete/ -type f -name "\*.txt" -delete
 
 # Showrss profile rss
   showrss:
@@ -48,7 +52,6 @@ tasks:
       host: 192.168.0.53
       port: 9091
       main_file_only: yes
-      content_filename: "{{series_name}} - {{series_id}}"
       username: transmission
       password: transmission
       path: "/downloads/complete/{{series_name}}"
