--- a/config.yml
+++ b/config.yml
@@ -76,9 +76,28 @@ tasks:
     list_add:
       - movie_list: new-movies
 
+  movies-new-va:
+    priority: 5
+    tail:
+      file: /home/ryan/.flexget/vaNewMovies.log
+      entry:
+        title: '^([^,]+)'
+        url: '^([^,]+)'
+      encoding: utf8
+    imdb:
+      min_score: 7
+      min_votes: 5000
+      reject_genres:
+        - horror
+    list_add:
+      - movie_list: new-movies
+    exec:
+      on_start:
+        phase: sh /home/ryan/.flexget/va.sh newmovies
+
 # Download movies
   movies-get:
-    priority: 5
+    priority: 6
     disable: seen
     tmdb_lookup: yes
     movie_list: new-movies
@@ -115,8 +134,8 @@ tasks:
           - rm "{{location}}"
 
 # Cleanvid (https://github.com/mmguero/cleanvid) new files.
-  clean:
-    priority: 6
+  clean-shows:
+    priority: 7
     metainfo_series: yes
     trakt_lookup: yes
     tvmaze_lookup: yes
@@ -140,3 +159,21 @@ tasks:
       on_exit:
         phase: rm /mnt/d/Media/*.srt
 
+  clean-movies:
+    priority: 8
+    tmdb_lookup: yes
+    imdb_lookup: yes
+    filesystem:
+      path:
+        - "/home/ryan/torrents/movies/"
+      recursive: yes
+      retrieve: files
+      regexp: '.*\.(avi|mkv|mp4)$'
+    if:
+      - imdb_mpaa_rating == 'R': accept
+    exec:
+      on_output:
+        for_accepted:
+          - cp "{{location}}" /mnt/d/Media/"{{filename}}"
+          - sh /home/ryan/va.sh movie "{{movie_name}}" /mnt/d/Media/"{{filename}}"
+          - rm "{{location}}"
