--- a/series.yml
+++ b/series.yml
@@ -10,6 +10,10 @@ series:
     - The Other One
     - The Yorkshire Vet
     - Trying
+    - 100 Foot Wave
+    - The Diplomat
+    - Surface
+    - Sweet Tooth
 
 # New Shows
     - All the Light We Cannot See
