--- a/series.yml
+++ b/series.yml
@@ -4,6 +4,7 @@ series:
 # anime in s00e00 format  
     - Yuru Camp
     - Spy x Family
+    - FLCL Shoegaze
 
 # Not yet on showrss
     - Sanditon
