--- a/config.yml
+++ b/config.yml
@@ -76,6 +76,25 @@ tasks:
     list_add:
       - movie_list: new-movies
 
+  movies-new-va:
+    priority: 5
+    tail:
+      file: /home/ryan/.flexget/vaNewMovies.txt
+      entry:
+        title: '^([^,]+)'
+        url: '^([^,]+)'
+      encoding: utf8
+    imdb:
+      min_score: 7
+      min_votes: 5000
+      reject_genres:
+        - horror
+    list_add:
+      - movie_list: new-movies
+    exec:
+      on_start:
+        phase: sh /home/ryan/.flexget/va.sh newmovies
+
   movies-manual:
     priority: 5
     tail:
@@ -112,7 +131,7 @@ tasks:
             category: highres movies
         - limetorrents:
             category: movies
-        - yts: true
+       # - yts: true
     list_match:
       from:
         - movie_list: new-movies
@@ -151,3 +170,22 @@ tasks:
           - rm "{{location}}"
       on_exit:
         phase: rm /mnt/d/Media/*.srt
+
+  clean-movies:
+    priority: 8
+    tmdb_lookup: yes
+    imdb_lookup: yes
+    filesystem:
+      path:
+        - "/home/ryan/torrents/movies/"
+      recursive: yes
+      retrieve: files
+      regexp: '.*\.(avi|mkv|mp4)$'
+    if:
+      - imdb_mpaa_rating == 'R': accept
+    exec:
+      on_output:
+        for_accepted:
+          - cp "{{location}}" /mnt/d/Media/"{{filename}}"
+          - sh /home/ryan/va.sh movie "{{movie_name}}" /mnt/d/Media/"{{filename}}"
+          - rm "{{location}}"
